k8s/overlays/dynamic-deploy/config-connector-resources.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress-env # from-param: ${INGRESS_NAME}
  labels:
    app: webapp
    team: webapp-team
    boundary: boundary # from-param: ${BOUNDARY}
    stage: stage # from-param: ${STAGE}
    tier: tier # from-param: ${TIER}
    mode: mode # from-param: ${MODE}
    # Legacy label for compatibility
    environment: env # from-param: ${BOUNDARY}
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "webapp-ip" # from-param: ${IP_NAME}
    networking.gke.io/managed-certificates: "webapp-cert" # from-param: ${CERT_NAME}
    kubernetes.io/ingress.allow-http: "true" # from-param: ${ALLOW_HTTP}
    external-dns.alpha.kubernetes.io/hostname: "example.webapp.example.com" # from-param: ${FULL_DOMAIN}
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  defaultBackend:
    service:
      name: webapp-service
      port:
        number: 80
